--- a/styles.css
+++ b/styles.css
@@ -64,29 +64,35 @@ body{
 }
 .loadingScreen{
     color: white; font-size: 5vh; display: none; text-align: center;
-    margin-top: 30vh;
+    margin-top: 0vh; position: fixed; background-color: black;
+    z-index: 99; width: 100%; height: 100%; padding-top: 30vh;
 }
-.grid{
-    display: grid; 
+
+.grid, .mockGrid{
+    display: grid;  overflow: hidden; font-size: 4vh; 
     width: 30vw; height: 30vw;
     grid-template-rows: repeat(10, 1fr);
     grid-template-columns: repeat(10, 1fr);
     border: solid white 2px; border-radius: 5px;
     margin-left: 10vw;
 }
-#playerBoard{
+.mockGrid>div{
+    padding-top: 0.4vh;
+}
+#playerBoard, .mockGrid{
     background-color: rgb(0, 81, 255);
 }
 #enemyBoard{
     background-color: red;
 }
-.grid>div{
+.grid>div, .mockGrid>div{
     border: 1px solid white; transition: 0.1s ease-in-out;
+    color: rgb(19, 171, 222);
 }
 .grid#enemyBoard>div:hover{
     background-color: white;
 }
-.gridContainer{
+.gridContainer, .mockGridContainer{
     display: none;
     grid-template-rows: 7fr 1fr; grid-template-columns: repeat(2, 1fr);
     text-align: center; font-size: 5vh;
@@ -137,4 +143,48 @@ div>.shipHit{
 #restart.show:hover{
     width: 20vw;
     transition: all 0.7s ease-in-out;
+}
+
+.setup{
+    display: grid;
+    grid-template-rows: 1fr 1fr 5fr 1fr;
+    justify-content: start; align-items: start;
+    gap: 2vh;
+}
+.setupForm{
+    display: grid; justify-content: center; align-items: center;
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: repeat(2, 1fr); gap: 1vh;
+}
+label{
+    transition: all 0.3s ease-in-out;
+}
+label:has(input[type = "radio"]:checked){
+    color: lightgreen; scale: 1.1; transition: all 0.3s ease-in-out;
+}
+input[type = "radio"]{
+    display: none;
+}
+#row, #col{
+    background-color: black; color: white; text-align: center;
+    width: 5vw; height: 4vh; font-size: 4vh; border-radius: 10px;
+    font-family: inherit;  border: none; padding-top: 1vh;
+}
+#row:focus, #col:focus{
+    outline: none;
+}
+.submitSetup{
+    border: 5px solid white; border-radius: 15px; transition: all 0.3s ease-in-out;
+}
+.submitSetup:hover{
+    scale: 1.1; box-shadow: 1px 1px 5px;
+}
+.randomButton{
+    text-align:center; width: 10vw; border: solid white 5px; border-radius: 15px;
+    position: relative; 
+    left: 7vw; top: 2vh; padding: 1vh 2vw 1vh 2vw; transition: all 0.3s ease-in-out;
+}
+.randomButton:hover{
+    background-image: radial-gradient(pink, lightblue, lightgreen); color: black; 
+     overflow: hidden; font-weight: 700; border-color: black;
 }
